<resources>
    <string name="gcm_sender_id">635788281460</string>
    <string name="title_activity_maps">Alert Map</string>
    <string name="select_language">Choose Language</string>
    <string name="welcome_aboard">Welcome Aboard!</string>
    <string name="languages">Languages</string>
    <string name="signin">Sign In</string>
    <string name="browse">Browse</string>
    <string name="action_settings">Settings</string>
    <string name="create_alert">Create Alert</string>
    <string name="enter_id">Enter your ID number</string>
    <string name="enter_email">Email Address</string>
    <string name="enter_pswd">Password</string>
    <string name="under_cons">Under Construction. Watch this space!</string>
    <string name="visiting">Just Visiting</string>
    <string name="alert_cat">Alert Category</string>
    <string name="alert_color">Alert Colour</string>
    <string name="enter_message">Enter message or comment</string>
    <string name="take_pics">Take Pictures</string>
    <string name="send_alert">Send Alert</string>
    <string name="map">Map</string>
    <string name="city_gallery">City Gallery</string>
    <string name="comms">Correspondence</string>
    <string name="info">Citizen Information</string>
    <string name="map_not_avail">Map not available</string>
    <string name="directions">Directions</string>
    <string name="pictures">Alert Pictures</string>
    <string name="photo_err">Photo error. Please try again.</string>
    <string name="alert_pics">Alert Pictures</string>
    <string name="title_activity_alert_picture_grid">AlertPictureGridActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="sel_type">Select Alert Type</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_main_pager">MainPagerActivity</string>
    <string name="title_activity_registration">Registration</string>
    <string name="enter_fname">Please enter your first name</string>
    <string name="enter_lname">Please enter your last name</string>
    <string name="select_email">Please select email account</string>
    <string name="no_accts">No Accounts found. Please create one and try again</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="welcome">eThekwini welcomes you to our Smart Community App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="optional">Optional</string>
    <string name="active_alerts">Active City Alerts</string>
    <string name="address_not_found">Address could not be calculated from the Alert coordinates</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="contacts">Contacts</string>
    <string name="action_example">Example action</string>
    <string name="payments">Payments</string>
    <string name="city_alerts">City Alerts</string>
    <string name="headlines">News Headlines</string>
    <string name="alerts">Alerts</string>
    <string name="my_complaints">My Complaints</string>
    <string name="my_accounts">My Accounts</string>
    <string name="comps_around_me">Complaints Around Me</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="ward_councillors">Ward Councillors</string>
    <string name="short_faq">FAQ</string>
    <string name="comp_types">Complaint Types</string>
    <string name="get_distance">Distance from You</string>
    <string name="dist_calc">"Distance calculated is: "</string>
    <string name="loc_unavailable">My location is not available</string>
    <string name="pay">Pay</string>
    <string name="acct_paymnts">"Account Payments: "</string>
    <string name="no_complaints">No Complaints</string>
    <string name="loc_services_not">Location Services Not Active</string>
    <string name="enable_gps">Please enable Location Services. This allows the app to use GPS for Complaints, Alerts and News</string>
    <string name="complaints_around_me">Complaints Around Me</string>
    <string name="enter_detail">Enter Details or Comment (Optional)</string>
    <string name="enter_detail2">Enter additional fault details</string>
    <string name="enter_complaint_address">Enter Complaint Address</string>
    <string name="sel_complaint_type">Select Complaint Type</string>
    <string name="make_complaint">Log a Complaint</string>
    <string name="unable_connect_muni">Unable to reach your Municipality. Data may be out of date.</string>
    <string name="complaints_history">Complaints History</string>
    <string name="city_news">City News</string>
    <string name="title_activity_my_complaints">MyComplaintsActivity</string>
    <string name="unable_save_photo">Unable to save photo. Please try again</string>
    <string name="compl_pics">Complaint Pictures</string>
    <string name="title_activity_faq">FaqActivity</string>
    <string name="title_activity_muni_contacts">MuniContactsActivity</string>
    <string name="title_activity_statement">StatementActivity</string>
    <string name="news_map">News on the Map</string>
    <string name="map_complaints">Complaints on the Map</string>
    <string name="no_network">No network connected. Please connect and try again</string>
    <string name="conn_interrupted">Connections to server interrupted. Please try again.</string>
    <string name="loc_services">Location Services</string>
    <string name="failed_comms">Failed to communicate, data format may be a problem</string>
    <string name="title_activity_account_drawer">AccountDrawerActivity</string>
    <string name="title_activity_fake_main">FakeMainActivity</string>
    <string name="title_activity_theme_selector">ThemeSelectorActivity</string>
    <string name="unable_download_faq">Unable to download Frequently Asked Questions</string>
    <string name="services_unavailable">Municipality Services are unavailable at this time</string>
    <string name="services_not_available">Municipality services are not available. Try later.</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>
    <string name="calc_complaint_address">Calculating complaint address ...</string>
    <string name="stmt_exists">Statement is already in your list</string>
    <string name="last_update">"Last Update: "</string>
    <string name="not_available">Not available</string>
    <string name="news_detail">Do you want to get more information on this News article?</string>
    <string name="more_detail">More Details</string>
    <string name="view_loc">View Location</string>
    <string name="faq_types">Frequent Question Types</string>
    <string name="help">Help</string>
    <string name="refresh">Refresh</string>
    <string name="select_complaint_type">Select ComplaintType</string>
    <string name="start_complaint">Start Complaint</string>
    <string name="history">A history of my complaints</string>
    <string name="no_news">No Current News</string>
    <string name="no_alerts">No Current Alerts</string>
    <string name="nonews_map">No news to display on map</string>
    <string name="noalerts_map">No alerts to display on map</string>
    <string name="payment_not_available">The payment facility is not available yet. The facility will be made available in the next version of the app.</string>
    <string name="idnumber">ID Number</string>
    <string name="update_address">Update Address</string>
    <string name="pos_addr">Possible Addresses</string>
    <string name="visa">Visa</string>
    <string name="mastercard">MasterCard</string>
    <string name="ukash">Ukash</string>
    <string name="instant_eft">Instant EFT</string>
    <string name="emergency_title">Emergency Numbers</string>
    <string name="fire_department_metro">Fire Department and Metro Police </string>
    <string name="police_number">10111</string>
    <string name="police_name">- National Flying Squad</string>
    <string name="report_crime_number">086 001 01111</string>
    <string name="report_crime">- Report  a crime </string>
    <string name="emergency_metro_number">031 361 0000</string>
    <string name="emergency_metro_name">- Emergency : Metro</string>
    <string name="water_traffic_title">Water and Traffic Hotline</string>
    <string name="water_traffic_number">080 131 3013</string>
    <string name="water_traffic_name">- Call centre </string>
    <string name="electricity_title">Electricity Contact Centre</string>
    <string name="electricity_number">080 13 13 111</string>
    <string name="ambulance_title">Ambulance</string>
    <string name="ambulance_number">10177</string>
    <string name="ambulance_name">- Ambulance </string>
    <string name="city_med_number1">031 309 1404</string>
    <string name="city_med_number2">/031 309 1778</string>
    <string name="city_med_name">- City Med </string>
    <string name="saredcross_number">031 337 6522</string>
    <string name="saredcross_name">- SA red cross </string>
    <string name="stjohns_ambulance_number">031 3056588</string>
    <string name="stjohns_ambulance_name">- St Johns Ambulance </string>
    <string name="netcare_number1">082 9111</string>
    <string name="netcare_number2">/0800 333 444</string>
    <string name="netcare_name">– Netcare</string>
    <string name="faults_title">24 Hour Faults</string>
    <string name="faults_number_1">080 131 3013</string>
    <string name="fault_description_1">- replace manhole covers and water pollution complaints </string>
    <string name="faults_number_2">083707 3013</string>
    <string name="fault_description_2">- 24 hour faults (SMS)</string>
    <string name="complaint_not_found">Complaint not found</string>
    <string name="downloaded_statement">Below are your previously downloaded statements</string>
    <string name="download_statement">To download your statements click search icon</string>
    <string name="first_gen_paragraph">eThekwini Municipality has released a new and improved mobile application for citizen engagement. In this updated version you can log cases such as:</string>
    <string name="report_electricity_outages">- Report electricity outages</string>
    <string name="no_water">- No water</string>
    <string name="missing_manhole_covers">- Missing manhole covers</string>
    <string name="potholes">- Potholes</string>
    <string name="broken_traffic_lights">- Broken traffic lights</string>
    <string name="noise">- Noise</string>
    <string name="burst_water_pipe">- Burst water pipe</string>
    <string name="high_bill">- High bill</string>
    <string name="illegal_dumping">- Illegal dumping</string>
    <string name="view_complaints_around_you">- View complaints around you</string>
    <string name="second_gen_paragraph">You can receive personalised news and alerts, these will be profile and location based. Users have the option to view alerts on a map.
        Users will also be able to view multiple municipal accounts and balances, pay for their accounts, download their statements in PDF as well as email and print a statement.<br />
The mobile app will also enable citizens to report incorrect billing to the municipality. Other features includes Frequently Asked Questions about the city services.</string>
    <string name="general_info_title">eThekwini Municipality Mobile Application</string>
</resources>