<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.boha.library.activities.EmergencyContactsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/mon_16">

                <TextView
                    android:padding="@dimen/emergency_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/EMC_title"
                    android:text="@string/emergency_title"
                    android:textSize="25dp"
                    android:textColor="@color/white"/>

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_below="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/EMERGENCY_SCROLL"
        android:layout_margin="@dimen/mon_padding">
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:padding="@dimen/emergency_padding"
                android:id="@+id/EC_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fire_department_metro"
                style="@style/Title3TextStyleBlack"/>
            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:layout_below="@id/EC_title1"
                android:id="@+id/EC_POLICE_NO."
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/police_number"
                android:autoLink="phone"/>
            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:layout_below="@+id/EC_title1"
                android:layout_toRightOf="@+id/EC_POLICE_NO."
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/police_name"
                android:id="@+id/EC_POLICE_NAME"/>
            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:autoLink="phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_REPORT_NO."
                android:layout_below="@+id/EC_POLICE_NO."
                android:text="@string/report_crime_number"/>
            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:layout_toRightOf="@+id/EC_REPORT_NO."
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_REPORT_NAME"
                android:layout_below="@+id/EC_POLICE_NAME"
                android:text="@string/report_crime"/>
            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:autoLink="phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_EMERGENCY_NO."
                android:layout_below="@+id/EC_REPORT_NO."
                android:text="@string/emergency_metro_number"/>
            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:layout_toRightOf="@+id/EC_EMERGENCY_NO."
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_EMERGENCY_NAME"
                android:layout_below="@+id/EC_REPORT_NAME"
                android:text="@string/emergency_metro_name"/>

            <TextView
                android:padding="@dimen/emergency_padding"
                android:layout_below="@+id/EC_EMERGENCY_NO."
                android:id="@+id/EC_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/water_traffic_title"
                style="@style/Title3TextStyleBlack"/>
            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:autoLink="phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_WATER_TRAFFIC_NO."
                android:layout_below="@+id/EC_title2"
                android:text="@string/water_traffic_number"/>
            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_WATER_TRAFFIC_NAME"
                android:layout_toRightOf="@+id/EC_WATER_TRAFFIC_NO."
                android:layout_below="@+id/EC_title2"
                android:text="@string/water_traffic_name"/>
            <TextView
                android:padding="@dimen/emergency_padding"
                android:layout_below="@+id/EC_WATER_TRAFFIC_NO."
                android:id="@+id/EC_title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/water_traffic_title"
                style="@style/Title3TextStyleBlack"/>
            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:autoLink="phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_ELECTRICITY_NO."
                android:layout_below="@+id/EC_title3"
                android:text="@string/electricity_number"/>
            <TextView
                android:padding="@dimen/emergency_padding"
                android:layout_below="@+id/EC_ELECTRICITY_NO."
                android:id="@+id/EC_title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ambulance_title"
                style="@style/Title3TextStyleBlack"/>
            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:autoLink="phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_AMBULANCE_NO."
                android:layout_below="@+id/EC_title4"
                android:text="@string/ambulance_number"/>
            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:layout_toRightOf="@+id/EC_AMBULANCE_NO."
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_AMBULANCE_NAME"
                android:layout_below="@+id/EC_title4"
                android:text="@string/ambulance_name"/>
            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:autoLink="phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_CITYMED_NO1"
                android:layout_below="@+id/EC_AMBULANCE_NO."
                android:text="@string/city_med_number1"/>
            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:autoLink="phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_CITYMED_NO2"
                android:layout_toRightOf="@+id/EC_CITYMED_NO1"
                android:layout_below="@+id/EC_AMBULANCE_NO."
                android:text="@string/city_med_number2"/>
            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_CITYMED_NAME"
                android:layout_toRightOf="@+id/EC_CITYMED_NO2"
                android:layout_below="@+id/EC_AMBULANCE_NAME"
                android:text="@string/city_med_name"/>

            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:autoLink="phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_SAREDCROSS_NO"
                android:layout_below="@+id/EC_CITYMED_NO1"
                android:text="@string/saredcross_number"/>
            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_SAREDCROSS_NAME"
                android:layout_toRightOf="@+id/EC_SAREDCROSS_NO"
                android:layout_below="@+id/EC_CITYMED_NAME"
                android:text="@string/saredcross_name"/>

            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:autoLink="phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_STJOHNS_AMBULANCE_NO"
                android:layout_below="@+id/EC_SAREDCROSS_NO"
                android:text="@string/stjohns_ambulance_number"/>
            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_STJOHNS_AMBULANCE_NAME"
                android:layout_toRightOf="@+id/EC_STJOHNS_AMBULANCE_NO"
                android:layout_below="@+id/EC_SAREDCROSS_NAME"
                android:text="@string/stjohns_ambulance_name"/>

            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:autoLink="phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_NETCARE_NO1"
                android:layout_below="@+id/EC_STJOHNS_AMBULANCE_NO"
                android:text="@string/netcare_number1"/>
            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:autoLink="phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_NETCARE_NO2"
                android:layout_toRightOf="@+id/EC_NETCARE_NO1"
                android:layout_below="@+id/EC_STJOHNS_AMBULANCE_NAME"
                android:text="@string/netcare_number2"/>
            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_NETCARE_NAME"
                android:layout_toRightOf="@+id/EC_NETCARE_NO2"
                android:layout_below="@+id/EC_STJOHNS_AMBULANCE_NAME"
                android:text="@string/netcare_name"/>
            <TextView
                android:padding="5dp"
                android:layout_below="@+id/EC_NETCARE_NO1"
                android:id="@+id/EC_title5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faults_title"
                style="@style/Title3TextStyleBlack"/>

            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:autoLink="phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_FAULTS_NO"
                android:layout_below="@+id/EC_FAULTS_NO2"
                android:text="@string/faults_number_1"/>
            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_FAULTS_NAME"
                android:layout_toRightOf="@+id/EC_FAULTS_NO"
                android:layout_below="@+id/EC_FAULTS_NAME2"
                android:text="@string/fault_description_1"/>
            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:autoLink="phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_FAULTS_NO2"
                android:layout_below="@+id/EC_title5"
                android:text="@string/faults_number_2"/>
            <TextView
                android:textSize="@dimen/emergency_text_size"
                android:textStyle="bold"
                android:padding="@dimen/emergency_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EC_FAULTS_NAME2"
                android:layout_toRightOf="@+id/EC_FAULTS_NO"
                android:layout_below="@+id/EC_title5"
                android:text="@string/fault_description_2"/>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
